# deep_learnings

./: .gitignore  GNN_part1.qmd  README.md  deeplearning_3_tensorflow_keras.qmd  deeplearning_4_ML_beginner_image.qmd  deeplearning_5_text_classification.ipynb  deeplearning_6_text_tensorflowhub.qmd  deeplearning_7_regression.qmd  deeplearning_8_transferlearning.qmd  deeplearning_9_over_under.qmd  deeplearning_9a_reshapeWithMetrics.qmd  deeplearning_implement_NN.qmd  deeplearning_specialization.qmd  diversity.qmd  jupyter_test.ipynb  main.py  multiprocessing_learning.qmd  pyproject.toml  python_deeplearning_ai.qmd
