[project]
name = "deep-learnings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aisetup>=0.1.9",
    "ipympl>=0.9.8",
    "jupyter>=1.1.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tensorflow-datasets>=4.9.9",
    "tensorflow-docs>=2025.2.19.33219",
    "tensorflow-hub>=0.16.1",
    "tensorflow[and-cuda]>=2.20.0",
    "tf-keras>=2.20.1",
]
